# notes

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.rst  docker-compose.yaml  local.sh  requirements.txt  setup.cfg  tox.ini
envs/: acc-mysql  ael-mysql  dev-mysql  hayei-sjc-mysql  hayei-stage-mysql  hayei-yul-mysql  itg-mysql  local-mysql  local-psql  prod-mysql  remote-psql  stage-mysql  team-mysql  wm-mysql
migrations/: script.py.mako
notes/: .pylintrc  Dockerfile  Pipfile  app.py  autoapp.py  errors.py  extensions.py  local.sh  requirements.txt  settings.py  setup.cfg
notes/auth/: controller.py  utils.py  views.py
notes/domain/: base.py  models.py  schemas.py
notes/migrations/: script.py.mako
notes/note/: controller.py  utils.py  views.py
notes/notes/: autoapp.py  utils.py
notes/notes/auth/: controller.py  utils.py  views.py
notes/notes/domain/: sql.py
notes/notes/note/: views.py
notes/scripts/: check_create_database.py
notes/tests/fixtures/: unit_test_fixtures.py
notes/tests/integration/: test_views_auth.py
notes/tests/unit/: test_auth_controller.py  test_auth_utils.py  test_note_views.py
scripts/: check_create_database.py  create_sqlite_devdb.py  datasources_and_environments.sql  init_fingerprint.py  init_metrics.py  init_roles_and_permissions.py  recover_datasources_and_environments.sh  recover_roles_and_permissions.sh  roles_and_permissions.sql  smarty-fullbackup.sh  smarty-fullrecovery.sh  smarty-recover.sh  update_roles_and_permissions.py
section/: app.py  autoapp.py  extensions.py  settings.py  utils.py
(+57 files in other folders)
