[metadata]
name = smarty
version = attr: smarty.__version__
description = The Cerebro Incident Management Database

[options]
packages = find:

[options.packages.find]
exclude =
    tests

[tool:pytest]
markers =
    mysql: mark a test requiring MySQL.

[isort]
force_single_line = true
default_section = THIRDPARTY
known_first_party =
    smarty
    tests

[yapf]
based_on_style = pep8
align_closing_bracket_with_visual_indent = false
split_before_bitwise_operator = false
split_before_logical_operator = false
