[metadata]
name = notes
version = attr: notes.__version__
description = Notes project implementation

[options]
packages = find:

[options.packages.find]
exclude =
    tests

[tool:pytest]
markers =
    mysql: mark a test requiring MySQL.

[isort]
force_single_line = true
default_notes = THIRDPARTY
known_first_party =
    notes
    tests

[yapf]
based_on_style = pep8
align_closing_bracket_with_visual_indent = false
split_before_bitwise_operator = false
split_before_logical_operator = false
